--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,8 +1,16 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0
+}
+
 .login-container, .register-container {
     background: url("../images/zion.svg") no-repeat;
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,6 +26,8 @@
 .login-title, .register-title {
     font-size: 2em;
     margin-bottom: 1em;
+    color:#EE6417;
+
 }
 
 .form {
