--- a/src/styles/post-form.css
+++ b/src/styles/post-form.css
@@ -1,29 +1,46 @@
-.form-wrapper {
-    border: 1px solid black;
-    margin: 0 auto;
-    border-radius: 3px;
+
+.post-form {
+    font-family: 'Montserrat', sans-serif;
+    background-color: #3a5a40;
+    color: white;
+    border-radius: 7px;
+    margin: 3em auto;
+    padding: 1em 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
     width: 400px;
     height: 300px;
 }
 
-.post-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: space-around;
-    /* width: 400px;
-    height: 300px; */
-}
-
 .lot-details, .status-details {
-    background-color: yellow;
     display: flex;
     justify-content: space-between;
     width: 80%;
-    height: 50px;
+ 
 }
 
 .textarea {
+    border: 2px solid black;
     width: 80%;
-    height: 30px;
+    height: 70px;
+    padding: .3em .5em;
+    outline: none;
+}
+
+.post-btn{
+    letter-spacing: 2px;
+    padding: .5em 1em;
+    cursor: pointer;
+    border-radius: 3px;
+    margin: .2em 0;
+    background-color: white;
+    border: none;
+    color: #3a5a40;
+}
+
+.post-btn:hover {
+    background-color: black;
+    color: white;
 }
