--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -5,13 +5,16 @@
 body {
     margin: 0
 }
-
+ 
 .page-container {
     margin: 0;
     height: 100%;
 }
 
 .login-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 1em 2em .5em;
     border-bottom: 4px solid #3a5a40;
 }
@@ -40,17 +43,17 @@ body {
 
 .login-form-container, .register-form-container {
     background-color: rgba(255, 255, 255, .85);  
-    padding: 3em; 
+    padding: 3em 4em 2em; 
     border-radius: 5PX;
 }
 
 .login-title, .register-title {
-    font-family: 'Montserrat', sans-serif;;
+    font-family: 'Montserrat', sans-serif;
     font-size: 1.7em;
     text-transform: uppercase;
-    letter-spacing: 2px;
+    letter-spacing: 5px;
     font-weight: 500;
-    margin-bottom: 1em;
+    /* margin-bottom: .5em; */
     color:#EE6417;
 
 }
@@ -63,9 +66,37 @@ body {
 
 .input {
     line-height: 2;
-    margin: .7em 0;
+    padding: .2em .4em;
+    letter-spacing: 2px;
+    border: 1px solid transparent;
+    border-bottom: 1px solid #3a5a40;
+    background-color: transparent;
+    outline: none;
+    margin-top: 2em;
 }
 
-.submit-btn {
-    margin: .5em 0;
+.input:focus {
+    border: 1px solid #3a5a40;
+}
+
+.login-btn, .register-btn {
+    font-size: 1rem;
+    letter-spacing: 2px;
+    padding: .5em 1em;
+    cursor: pointer;
+    border-radius: 3px;
+    margin: 2em 0;
+    background-color: white;
+    border: none;
+    color: #EE6417;
+}
+
+.login-btn:hover, .register-btn:hover {
+    background-color: #EE6417;
+    color: white;
+}
+
+.register-msg {
+    font-size: .7rem;
+    letter-spacing: 1px;
 }
