--- a/src/styles/post-form.css
+++ b/src/styles/post-form.css
@@ -37,6 +37,7 @@
     letter-spacing: 2px;
     padding: .5em 1em;
     cursor: pointer;
+    outline: none;
     border-radius: 3px;
     margin: .2em 0;
     background-color: white;
